@@ -78,7 +78,9 @@
       the default for \command{R CMD check --as-cran} or can be enabled
       by setting environment variable \env{_R_CHECK_FF_CALLS_} to
       \samp{registration} (but is in any case supressed by
-      \option{--install=no}).
+      \option{--install=no}).   Because this checks calls in which
+      \code{.NAME} is an \R object and not just a literal character
+      string, some other problems are detected for such calls.
 
       Functions \code{suppressForeignCheck()} and \code{dontCheck()}
       have been added to allow package authors to suppress false
